gap fix

--- a/style.css
+++ b/style.css
@@ -203,6 +203,9 @@ width: 599px;
        flex-direction: column-reverse;
 
 }
+.banner-right-side{
+    margin-bottom: 5rem;
+}
 h1{
     margin-top: 30px;
     margin-left: auto;
